old/gke/validate-install/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mario
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - mario.example.com
  rules:
    - host: mario.example.com
      http:
        paths:
          - path: /
            pathPrefix: Prefix
            backend:
              service:
                name: mario
                port:
                  number: 80
